<resources>
    <string name="app_name">My Application</string>
    <string name="hello">CourtCounter</string>
    <string name="alter">转换为华氏度</string>
    <string name="A">Team A </string>
    <string name="B">Team B </string>
    <string name="out1">0</string>
    <string name="out2">0</string>
    <string name="img">记分板</string>
    <string name="btn">+3 points </string>
    <string name="btn1">+2 points</string>
    <string name="btn2">free throw</string>
    <string name="btn3">reset</string>
    <string name="hi">hello</string>
    <string name="DOLLAR">DOLLAR</string>
    <string name="EURO">EURO</string>
    <string name="WON">WON</string>
    <string name="SAVE">SAVE</string>
    <string name="config">CONFIG</string>
    <string name="hint">input RMB</string>
    <string name="label_first">First Page</string>
    <string name="label_second">Second Page</string>
    <string name="label_third">Third Page</string>
</resources>
