<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".exchange">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:hint="INPUT RMB"
            android:inputType="textPersonName"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/hi"
            android:textSize="50dp" />

        <Button
            android:id="@+id/dollar"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btn"
            android:background="@color/colorButton"
            android:text="@string/DOLLAR" />

        <Button
            android:id="@+id/euro"
            android:layout_margin="10dp"
            android:background="@color/colorButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btn"
            android:text="@string/EURO" />

        <Button
            android:background="@color/colorButton"
            android:layout_margin="10dp"
            android:id="@+id/won"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="btn"
            android:text="@string/WON" />

        <Button
            android:id="@+id/open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="onConfig"
            android:background="@color/colorButton"
            android:text="@string/config" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>